--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-# Design files (please do not remove 🙂)
+# Design files
 *.sketch
 *.fig
 *.xd
+/design
 
 # Dependencies
 /node_modules
@@ -10,6 +11,9 @@
 yarn.debug.log*
 yarn.error.log*
 npm-debug.log*
+
+# Tailwind build output
+public/output.css
 
 # Environment and secrets
 .env
