--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,7 @@
   "htmlWhitespaceSensitivity": "ignore",
   "printWidth": 120,
   "singleQuote": true,
-  "semi": true
+  "semi": true,
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "tailwindStylesheet": "src/styles/tailwind.css"
 }
