--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@hiseb/confetti": "^2.1.0",
     "@tailwindcss/cli": "^4.1.18",
     "tailwindcss": "^4.1.18"
   },
